WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249945
REGRESSION(
258290@main
): [GTK] Attempts to emit nonexistent web-process-crashed signal
https://bugs.webkit.org/show_bug.cgi?id=249945
Summary
REGRESSION(258290@main): [GTK] Attempts to emit nonexistent web-process-crash...
Michael Catanzaro
Reported
2022-12-29 10:28:04 PST
The WebKitWebView::web-process-crashed signal has been removed, but we still attempt to emit it.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-12-29 10:33:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8103
EWS
Comment 2
2022-12-30 10:00:23 PST
Committed
258362@main
(826897936d56): <
https://commits.webkit.org/258362@main
> Reviewed commits have been landed. Closing PR #8103 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug