REGRESSION(258290@main): [GTK] Attempts to emit nonexistent web-process-crashed signal https://bugs.webkit.org/show_bug.cgi?id=249945

Reviewed by Carlos Garcia Campos.

* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewWebProcessTerminated):

Canonical link: https://commits.webkit.org/258362@main